Fix button spacing

--- a/src/app.sass
+++ b/src/app.sass
@@ -39,6 +39,8 @@ body
 .btn-group
   padding: 0
   margin-top: 50px
+  display: flex
+  justify-content: space-between
 
   li
     background: #f8bd46
@@ -59,3 +61,10 @@ body
   body
     padding: 15px
     text-align: center
+
+  .btn-group
+    display: block
+
+    li
+      margin-left: 5px
+      margin-right: 5px
